fixed the issue with different pages where the footer was overlapping with elements.

--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -25,7 +25,7 @@
   
 .social-icon {
     color: #fff;
-    font-size: 22px;
+    font-size: 26px;
     margin-right: 17px;
 }
   
