--- a/client/src/components/HomePage.css
+++ b/client/src/components/HomePage.css
@@ -48,3 +48,7 @@
     color:rgb(215, 211, 211);
 }
 
+.home-page-container {
+    padding-bottom: 90px;
+}
+
