--- a/client/src/components/SignupPage.css
+++ b/client/src/components/SignupPage.css
@@ -75,3 +75,7 @@ body {
     background-color: #ff6b81 !important ;
 }
 
+.signup-page {
+    padding-bottom: 90px;
+}
+
