--- a/client/src/pages/AboutPage.css
+++ b/client/src/pages/AboutPage.css
@@ -19,6 +19,7 @@
   font-size: larger;
   color: #ffffff;
   font-size: 17px;
+  padding-bottom: 90px;
 }
 
 .repo-link {
